--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,8 @@
 # Ignore bundler config.
 /.bundle
 
-# Ignore all environment files (except templates).
+# Ignore all environment files.
 /.env*
-!/.env*.erb
 
 # Ignore all logfiles and tempfiles.
 /log/*
@@ -38,9 +37,4 @@
 !/app/assets/builds/.keep
 
 /node_modules
-
-# Ignore default Litestack SQLite databases.
-/db/**/*.sqlite3
-/db/**/*.sqlite3-*
 *~
-/.sqlpkg/
