--- a/config/database.yml
+++ b/config/database.yml
@@ -9,17 +9,45 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
-development:
+errors: &errors
   <<: *default
-  database: storage/development.sqlite3
+  migrations_paths: db/errors_migrate
+  database: storage/<%= Rails.env %>-errors.sqlite3
+
+cable: &cable
+  <<: *default
+  migrations_paths: db/cable_migrate
+  database: storage/<%= Rails.env %>-cable.sqlite3
+
+cache: &cache
+  <<: *default
+  migrations_paths: db/cache_migrate
+  database: storage/<%= Rails.env %>-cache.sqlite3
+
+queue: &queue
+  <<: *default
+  migrations_paths: db/queue_migrate
+  database: storage/<%= Rails.env %>-queue.sqlite3
+
+development:
+  primary:
+    <<: *default
+    database: storage/development.sqlite3
+  queue: *queue
+  cache: *cache
+  cable: *cable
+  errors: *errors
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: storage/test.sqlite3
-
+  primary:
+    <<: *default
+    database: storage/test.sqlite3
+  queue: *queue
+  cache: *cache
+  cable: *cable
 
 # Store production database in the storage/ directory, which by default
 # is mounted as a persistent Docker volume in config/deploy.yml.
@@ -27,15 +55,7 @@ production:
   primary:
     <<: *default
     database: storage/production.sqlite3
-  cache:
-    <<: *default
-    database: storage/production_cache.sqlite3
-    migrations_paths: db/cache_migrate
-  queue:
-    <<: *default
-    database: storage/production_queue.sqlite3
-    migrations_paths: db/queue_migrate
-  cable:
-    <<: *default
-    database: storage/production_cable.sqlite3
-    migrations_paths: db/cable_migrate
+  queue: *queue
+  cache: *cache
+  cable: *cable
+  errors: *errors
