--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,8 +12,7 @@
     "ghcr.io/devcontainers/features/node:1": {},
     "ghcr.io/devcontainers/features/python:1": {},
     "ghcr.io/rails/devcontainer/features/sqlite3": {},
-    "ghcr.io/rails/devcontainer/features/activestorage": {},
-    "ghcr.io/nullcoder/devcontainer-features/stripe-cli:latest": {}
+    "ghcr.io/rails/devcontainer/features/activestorage": {}
   },
 
 
