--- a/.devcontainer/compose.yaml
+++ b/.devcontainer/compose.yaml
@@ -1,4 +1,4 @@
-name: "weisslich-rails"
+name: "fridge_door-rails"
 
 services:
   rails-app:
@@ -15,6 +15,8 @@ services:
 
     # Overrides default command so things don't shut down after the process ends.
     command: sleep infinity
+    ports:
+      - 3000:3000
 
     depends_on:
       - chrome-server
