--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -1,8 +1,8 @@
 # Name of your application. Used to uniquely configure containers.
-service: weisslich
+service: fridge_door
 
 # Name of the container image.
-image: your-user/weisslich
+image: julianrubisch/fridge_door
 
 # Deploy to these servers.
 servers:
@@ -63,7 +63,7 @@ aliases:
 # Use a persistent storage volume for sqlite database files and local Active Storage files.
 # Recommended to change this to a mounted volume path that is backed up off server.
 volumes:
-  - "weisslich_storage:/rails/storage"
+  - "fridge_door_storage:/rails/storage"
 
 
 # Bridge fingerprinted assets, like JS and CSS, between versions to avoid
