--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.10",
     "@josefarias/hotwire_combobox": "^0.3.2",
+    "@rails/actiontext": "^8.0.201",
     "bulma": "^1.0.2",
     "sass": "^1.79.4",
-    "stimulus-vite-helpers": "^3.1.0"
+    "stimulus-vite-helpers": "^3.1.0",
+    "trix": "^2.1.15"
   },
   "scripts": {
     "build:css": "sass ./app/assets/stylesheets/application.bulma.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
